# sk-wwise-mcp

./: .gitignore  LICENSE  README.md  build.ps1  cli.py  do_move_import.py  do_music_import.py  gen_cry_assignments.py  gen_imports.py  gen_music_imports.py  install.py  main.py  pokemon_cries_import.txt  pokemon_moves_import.txt  pyproject.toml  set_profile.py  setup.bat  setup.py  setup.sh  sk-wwise-mcp.spec
.claude/: settings.json
.github/workflows/: release.yml
core/: audio_convert.py  generic_handling.py  media.py  objects.py  pipeline.py  profiling.py  query.py  transport.py  ui.py  waapi_util.py  wwise_cli.py
mcp_audition/: server.py
mcp_browse/: server.py
mcp_command_line/: server.py
mcp_containers/: server.py
mcp_generic/: server.py
mcp_media_read/: server.py
mcp_objects/: server.py
mcp_pipeline/: server.py
mcp_profiling/: server.py
mcp_profiling_control/: server.py
mcp_remote/: server.py
mcp_ui/: server.py
profiles/: admin.mcp.json  designer.mcp.json  editor.mcp.json  viewer.mcp.json
release/: README.md  mcp.json
tests/: test_build_property_query.py  test_build_query.py  test_core_profiling.py  test_core_transport.py  test_dispatcher.py  test_generic_handling.py  test_media.py  test_query_waapi.py  test_server_audition.py  test_server_browse.py  test_server_command_line.py  test_server_containers.py  test_server_objects.py  test_server_profiling.py  test_server_profiling_control.py  test_server_remote.py  test_server_ui.py  test_summarize.py
tests/eval/: log_tool.py  report.py  setup_manifest.json  test_cases.json  verify.py  (+2 more)
(+47 files in other folders)
