[project]
name = "sk-wwise-mcp"
version = "0.1.0"
description = "Modular MCP servers for Wwise — browse, edit, audition, profile, and build projects via WAAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "waapi-client>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "mcp_*", "profiles*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running Wwise headless WAAPI server (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
